--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ a:hover {
 
 body {
   font-family: "Poppins", sans-serif;
+  perspective: 1000px;
 }
 
 .container {
@@ -340,6 +341,15 @@ nav .container {
   margin-top: -1rem;
 }
 
+.container-narrow {
+  perspective: 700px;
+  /* transform-style: preserve-3d; */
+  /* perspective: 1000px; */
+}
+.card-middle {
+  /* perspective: 1200px; */
+}
+
 .card-left a {
   background: linear-gradient(
     92.9deg,
@@ -370,6 +380,9 @@ nav .container {
 
 .card-middle h3 {
   color: #ffe3e8;
+  transform-style: preserve-3d;
+  z-index: 100;
+  /* perspective: 1000px; */
 }
 
 .card-right h3 {
@@ -404,6 +417,7 @@ nav .container {
   background: linear-gradient(140.66deg, #c4c4c4 40.03%, #ffa0a0 85.97%);
   box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.2);
   position: relative;
+  z-index: 1;
 }
 
 .circle-right {
@@ -424,6 +438,8 @@ nav .container {
   width: 10rem;
   top: -19px;
   left: -16px;
+  z-index: 2;
+  perspective: 500px;
 }
 
 .circle-right img {
