--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a:hover {
 
 body {
   font-family: "Poppins", sans-serif;
-  perspective: 1000px;
+  /* perspective: 1000px; */
 }
 
 .container {
@@ -306,7 +306,7 @@ nav .container {
     rgba(141, 141, 141, 0.1) 100%
   );
   box-shadow: 3px 6px 7px rgba(255, 255, 255, 0.26);
-  backdrop-filter: blur(1rem);
+  /* backdrop-filter: blur(1rem); */
 
   border-radius: 30px;
   display: flex;
@@ -340,14 +340,16 @@ nav .container {
 .read-btn-card {
   margin-top: -1rem;
 }
-
+.work-cards {
+  perspective: 1000px;
+}
 .container-narrow {
-  perspective: 700px;
+  /* perspective: 1000px; */
   /* transform-style: preserve-3d; */
   /* perspective: 1000px; */
 }
 .card-middle {
-  /* perspective: 1200px; */
+  transition: all 0.5s ease;
 }
 
 .card-left a {
@@ -439,7 +441,7 @@ nav .container {
   top: -19px;
   left: -16px;
   z-index: 2;
-  perspective: 500px;
+  /* perspective: 500px; */
 }
 
 .circle-right img {
